[package]
name = "hacker_rank_solutions"
version = "0.1.0"
edition = "2024"

[dependencies]
criterion = "0.8.2"
lib = "0.0.2-build"
gnuplot = "0.0.46"
log = "0.4.29"
rand = "0.8"


#Run with
#clear; cargo bench --benches
[[bench]]
name = "template_bench"
path = "src/bin/proj_a/benches/a_bench.rs"
harness = false
#bench = true
bench = false

[[bench]]
name = "smallest_int_bench"
path = "src/bin/smallest_int/benches/smallest_int_bench.rs"
harness = false
bench = true
#bench = false

[[bench]]
name = "palindrome_bench"
path = "src/bin/nontrivial_palindrome/benches/pali_bench.rs"
harness = false
#bench = true
bench = false